# Winhance-FS

./: .editorconfig  .gitignore  Claude_Chat.md  pyproject.toml
.github/workflows/: audit.yml  build-release.yml  ci.yml
docs/: AUDIT_STATUS.md  CODEBASE_FIX_ACTION_PLAN.md  COMPREHENSIVE_MISSING_FEATURES.md  CURRENT_WARNINGS.txt  CURRENT_WARNINGS_FILTERED.txt  DOTNET_WARNINGS_BY_FILE.md  DOTNET_WARNINGS_FULL_LIST.txt  DOTNET_WARNING_ANALYSIS.md  DOTNET_WARNING_ELIMINATION_PLAN.md  DOTNET_WARNING_PROGRESS_REPORT.md  DUAL_AGENT_SETUP_COMPLETE.md  FEATURES.md  FEATURE_COMPLETION_TRACKER.md  FILE_MANAGER_IMPLEMENTATION_STATUS.md  MASTER_FILE_MANAGER_FEATURES_AUDIT.md  PARALLEL_DEVELOPMENT_GUIDE.md  UNIFIED_MASTER_ACTION_PLAN.md  WINDSURF_BLUEPRINTS.md  WINDSURF_CI_ISSUES.md  WINDSURF_DOTNET_WARNINGS.md  WINDSURF_DOTNET_WARNINGS_COMPLETE.md  WINDSURF_MASTER_GUIDE.md  WINDSURF_PYTHON_LINT_FIXES.md  WINHANCE_FS_WPF_RUST_PY_BLUEPRINT_FOR_WINDSURF.md
src/Winhance.Core/Features/Common/Interfaces/: IDialogService.cs  INavigationService.cs
src/Winhance.Core/Features/Common/Models/: ConfigurationItem.cs  TaskProgressDetail.cs
src/Winhance.Core/Features/Common/Services/: LogService.cs
src/Winhance.Core/Features/SoftwareApps/Interfaces/: IExternalAppsService.cs  ILegacyCapabilityService.cs  IOptionalFeatureService.cs  IWinGetService.cs  IWindowsAppsService.cs
src/Winhance.Core/Features/SoftwareApps/Models/: ItemDefinition.cs
src/Winhance.Infrastructure/Features/AdvancedTools/Services/: AutounattendScriptBuilder.cs
src/Winhance.Infrastructure/Features/Common/Services/: CompatibleSettingsRegistry.cs  ConfigurationApplicationBridgeService.cs  FrameNavigationService.cs  InternetConnectivityService.cs  JsonParameterSerializer.cs  PowerShellExecutionService.cs  ScheduledTaskService.cs  TaskProgressService.cs  ViewPoolService.cs  WindowsRegistryService.cs
src/Winhance.Infrastructure/Features/Customize/Services/: StartMenuService.cs
src/Winhance.Infrastructure/Features/SoftwareApps/Services/: LegacyCapabilityService.cs  OptionalFeatureService.cs  StoreDownloadService.cs  WinGetService.cs  WindowsAppsService.cs
src/Winhance.WPF/: App.xaml.cs
src/Winhance.WPF/Features/Common/Services/: ConfigurationService.cs  DialogService.cs  FeatureViewModelFactory.cs  UserPreferencesService.cs
src/Winhance.WPF/Features/Common/ViewModels/: BaseCategoryViewModel.cs  BaseContainerViewModel.cs  BaseSettingsFeatureViewModel.cs  MainViewModel.cs  (+3 more)
src/nexus_ai/: config.py
src/nexus_ai/core/: agents.py  ai_providers.py  backup_system.py  doc_automation.py  gpu_accelerator.py  logging_config.py
src/nexus_ai/indexer/: hyper_indexer.py
src/nexus_ai/organization/: transaction_manager.py
src/nexus_ai/tools/: __init__.py  file_classifier.py  model_relocator.py  realtime_organizer.py  smart_filemanager.py  space_analyzer.py
src/nexus_cli/: main.py
src/nexus_mcp/: server.py
tasks/: PHASE_1_FOUNDATION.md  PHASE_2_RUST_BACKEND.md  PHASE_3_CSHARP_INTEGRATION.md  PHASE_4_UI_THEMING.md  PHASE_5_AI_AGENTS.md  PHASE_6_MCP_SERVER.md  PHASE_7_TESTING.md  PHASE_8_RELEASE.md  PROJECT_ROADMAP.md  README.md
tests/: test_file_classifier.py  test_smart_filemanager.py
(+8 files in other folders)
